--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -38,6 +38,13 @@ dependencies:
   image_cropper: ^11.0.0
   table_calendar: ^3.2.0
   intl: ^0.20.2
+  drift: ^2.30.0
+  uuid: ^4.5.2
+  drift_flutter: ^0.2.8
+  sqlite3_flutter_libs: ^0.5.41
+  path_provider: ^2.1.5
+  path: ^1.9.1
+  provider: ^6.1.5+1
 
 dev_dependencies:
   flutter_test:
@@ -49,6 +56,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^6.0.0
+  build_runner: ^2.10.4
+  drift_dev: ^2.30.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
