--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   path_provider: ^2.1.5
   path: ^1.9.1
   provider: ^6.1.5+1
+  flutter_localizations:
+    sdk: flutter
 
 dev_dependencies:
   flutter_test:
