shifts implementation and icons

--- a/app/.gitignore
+++ b/app/.gitignore
@@ -9,6 +9,7 @@
 .buildlog/
 .history
 .svn/
+flutter_launcher_icons.yaml
 
 # As packages are no longer pinned, we use a lockfile for testing locally.
 # When unpinning packages, Using lockfiles ensures that failures in PRs are
